<resources>
    <string name="app_name">NguyenPhiLong_18521043</string>
    <string name="calculator">Calculator</string>
    <string name="color_change">Color Change</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="project">Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>